[package]
name = "scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
parking_lot = "0.12.1"
libloading = "0.8.3"
patternscan = "1.2.0"
object = "0.33"
serde = { version = "1", features = ["derive"] }
paste = "1.0.15"

cranelift = "0"
cranelift-module = "0"
cranelift-jit = "0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = { git = "https://github.com/JohnTitor/mach2" }
mach_o = "0.1.2"
# Needed for disarm64 decoder
bitfield-struct = "0.10"
disarm64_defn = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
retour = { version = "0.3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]


[target.'cfg(target_os = "macos")'.build-dependencies]
anyhow = "1"
